@@ -8,6 +8,7 @@
 * Brivona theme & Zeen theme Tipi Builder compatibility - FIXED
 * Rating not updated when SG optimizer cache is active - FIXED
 * Add listing child categories checkbox not showing left padding on frontend - FIXED
+* Make new field by default ticked active in field setting - CHANGED
 
 = 2.1.0.13 =
 * Small fix for the way some addresses are geocoded if "postal_town" is present - FIXED
